The first paragraphs of the thesis.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -48,6 +48,16 @@
 
 \chapter{Introduction} \label{ch1}
 
+The concern of this thesis are functional algorithms and data structures. The Free Dictionary says \cite{TheFreeDictionary} that an algorithm is
+
+\begin{quote}
+    A finite set of unambiguous instructions that, given some set of initial conditions, can be performed in a prescribed sequence to achieve a certain goal and that has a recognizable set of end conditions.
+\end{quote}
+
+The purpose of this entry is to explain the concept to a lay person, but it likely sounds just about right to the imperative programmer's ear too. To a functional ear, however, talking about sequences of instructions most certainly sounds as un-functional as it possibly could. It is no wonder then that some people wonder if it is even possible for algorithms to ``exist'' in a functional programming language, as exemplified by this StackOverflow question \cite{SO}. The poor soul asking this question strongly associated algorithms with imperative languages, even though functional languages are based on lambda calculus, which was invented precisely to formalize what an algorithm is.
+
+This situation is not uncommon and rather easy to explain.
+
 \section{Imperative and functional algorithms}
 
 Differences between imperative and functional algorithms.
@@ -77,6 +87,15 @@ Binary search trees: a case study to show the basic workflow and that it's not t
 %%%%% BIBLIOGRAFIA
 
 \begin{thebibliography}{1}
+
+\bibitem{TheFreeDictionary}
+    \textit{Algorithm}, 2020, \\
+    \url{https://www.thefreedictionary.com/algorithm}
+
+\bibitem{SO}
+    \textit{Do ``algorithms'' exist in Functional Programming?}, \\
+    \url{https://stackoverflow.com/questions/25940327/do-algorithms-exist-in-functional-programming}
+
 \end{thebibliography}
 
 \end{document}
