--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -40,6 +40,8 @@
 %\theoremstyle{plain} \newtheorem{lemma}[definition]{Lemma}
 %\renewcommand \qedsymbol {\ensuremath{\square}}
 
+\newcommand{\m}[1]{\texttt{#1}}
+
 %%%%%
 
 \begin{document}
@@ -60,13 +62,21 @@ The Free Dictionary says \cite{TheFreeDictionary} that an algorithm is
 
 The purpose of this entry is to explain the concept to a lay person, but it likely sounds just about right to the imperative programmer's ear too. To a functional ear, however, talking about sequences of instructions most certainly sounds as un-functional as it possibly could. It is no surprise then that some people wonder if it is even possible for algorithms to ``exist'' in a functional programming language, as exemplified by this StackOverflow question \cite{SO}. The poor soul asking this question had strongly associated algorithms with imperative languages in his head, even though functional languages are based on lambda calculus, which was invented precisely to formalize what an algorithm is.
 
-This situation is not uncommon and rather easy to explain. Imperative algorithms and data structures form one of the oldest, biggest, most widespread and prestigious fields of computer science. They are taught to every student in every computer science programme at every university. There's a huge amount of books and textbooks, with classics such as \cite{CLRS} \cite{TAOCP} known to pretty much everybody, at least by title. There's an even huger and still growing mass of research articles and conferences and I'm pretty sure there are at least some (imperative) algorithm researchers at every computer science department in existence.
+This situation is not uncommon and rather easy to explain. Imperative algorithms and data structures \footnote{From now on when we write ``algorithms'' we will mean ``algorithms and data structures''} form one of the oldest, biggest, most widespread and prestigious fields of computer science. They are taught to every student in every computer science programme at every university. There's a huge amount of books and textbooks, with classics such as \cite{CLRS} \cite{TAOCP} known to pretty much everybody, at least by title. There's an even huger and still growing mass of research articles and conferences and I'm pretty sure there are at least some (imperative) algorithm researchers at every computer science department in existence.
 
-Imperative algorithms and data structures are pretty much synonymous with competitive programming, dominating most in-person and online computer science competitions like ICPC and HackerRank, respectively. They are seen as the thing that gifted high school students interested in computer science should pursue -- each time said students don't win medals in the International Olympiad in Informatics, there will be some journalists and politcians complaining about the state of the country's education system.
+Imperative algorithms are pretty much synonymous with competitive programming, dominating most in-person and online computer science competitions like ICPC and HackerRank, respectively. They are seen as the thing that gifted high school students interested in computer science should pursue -- each time said students don't win medals in the International Olympiad in Informatics, there will be some journalists and politcians complaining about the state of a country's education system.
 
-Imperative algorithms and data structures don't form a mere field of study -- they are more of a mindset and a culture than a field; in short, they form a paradigm. Because this paradigm is so overarching, so powerful and so entrenched, we feel free to completely disregard it and instead devote ourselves and this thesis to something completely unlike it -- the formal verification of functional algorithms and data structures.
+Imperative algorithms don't form a mere field of study -- they are more of a mindset and a culture than a field; in short, following Kuhn \cite{Kuhn}, they can be said to form a paradigm. Because this paradigm is so vast, so powerful and so entrenched, we feel free to completely disregard it and devote ourselves and this thesis to studying another field (which did not yet reach the status of a paradigm) -- functional algorithms and data structures, focusing on proving their formal correctness.
+
+But before we do that, we spend the rest of this chapter on comparing the imperative and functional approaches to algorithms and briefly reviewing available literature on functional algorithms.
 
 \section{Imperative and functional algorithms}
+
+The toolboxes available to imperative and functional programmers are usually very different, even though there exist languages which quite successfully fuse them, like Rust.
+
+The basic data structure in imperative languages is the array, which abstracts a contiguous block of memory holding values of a particular type. More advanced data structures are usually records that hold values and pointers/references to other (or even the same) kinds of data structures. The basic control flow primitives for traversing these structures are various loops (\m{while}, \m{for}, \m{do} ... \m{while}) and branch statements (\m{if}, \m{switch}, \m{goto}). The most important operation is assignment, which changes the state held in a variable. Computation is modeled by a series of operations which change the global state.
+
+In functional languages both basic and advanced data structures amount to algebraic data types (whose values are various kinds of trees with labeled nodes that can hold values of specified types). The basic control flow primitives are pattern matching (checking the label and values of the tree's root) and recursion. The most important operation is function composition, which allows building complex functions from simpler ones. Computation is modeled by substitution of values for the formal parameters of a function.
 
 
 \section{Complexity, performance and correctness}
@@ -109,6 +119,9 @@ Binary search trees: a case study to show the basic workflow and that it's not t
 
 \bibitem{TAOCP}
     Donald Knuth, \textit{The Art of Computer Programming}
+
+\bibitem{Kuhn}
+    Thomas S. Kuhn, \textit{The Structure of Scientific Revolutions}
 
 \end{thebibliography}
 
