Explanation of the two sample programs in the introduction.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -72,11 +72,11 @@ But before we do that, we spend the rest of this chapter on comparing the impera
 
 \section{Two flavours of algorithms}
 
-The differences between imperative and functional algorithms are mostly a reflection of the differences between imperative and functional programming languages and only in a small part a matter of differences in focus. For example, it's rare but possible to implement persistent data structures in imperative languages, whereas it's the default for functional data structures \cite{PersistentDataStructures}, all caused by built-in language features. An example of the second kind of difference may be the bigger focus on lazy evaluation for functional algorithms.
+The differences between imperative and functional algorithms are mostly a reflection of the differences between imperative and functional programming languages and only in a small part a matter of differences in research focus. For example, it's rare but possible to implement persistent data structures in imperative languages, whereas it's the default for functional data structures \cite{PersistentDataStructures}, all caused by built-in language features. An example of the second kind of difference may be the bigger focus on lazy evaluation for functional algorithms.
 
 The basic data structure in imperative languages is the array, which abstracts a contiguous block of memory holding values of a particular type. More advanced data structures are usually records that hold values and pointers/references to other (or even the same) kinds of data structures. The basic control flow primitives for traversing these structures are various loops (\m{while}, \m{for}, \m{do} ... \m{while}) and branch/jump statements (\m{if}, \m{switch}, \m{goto}). The most important operation is assignment, which changes the state held in a variable. Computation is modeled by a series of operations which change the global state.
 
-In functional languages both basic and advanced data structures amount to algebraic data types (whose values are various kinds of trees with labeled nodes that can hold values of specified types). The basic control flow primitives are pattern matching (checking the label and values of the tree's root) and recursion. The most important operation is function composition, which allows building complex functions from simpler ones. Computation is modeled by substitution of values for the formal parameters of a function.
+In functional languages both basic and advanced data structures amount to algebraic data types (whose values are various kinds of trees with labeled nodes that can hold values of specified types). The basic control flow primitives are pattern matching (checking the label and values of the tree's root) and recursion. The most important operation is function composition, which allows building complex functions from simpler ones. Computation is modeled by substitution of arguments for the formal parameters of a function.
 
 \begin{listing}[H]
     \begin{minted}{Java}
@@ -106,7 +106,13 @@ In functional languages both basic and advanced data structures amount to algebr
     \end{center}
 \end{listing}
 
-The two above listings showcase the relevant differences in practice. In both cases we want a function that sums integers stored in the most basic data structure. In the case of our pseudo-Java, this is a built-in array, whereas in our pseudo-Haskell, this is a list defined, using the mechanism of algebraic data types, as sometihng which is either empty (\m{Nil}) or something that contains a value of type \m{a} and then another list.
+The two above listings showcase the relevant differences in practice. In both cases we want a function that sums integers stored in the most basic data structure. In the case of our pseudo-Java, this is a built-in array, whereas in our pseudo-Haskell, this is a list defined, using the mechanism of algebraic data types, as something which is either empty (\m{Nil}) or something that has a head of type \m{a} and a tail, which is another list of values of type \m{a}.
+
+In the imperative program, we declare a variable \m{result} to hold the current value of the sum and then we loop over the array. We start by creating an iterator variable \m{i} and setting it to \m{0}. We successively increment it with each iteration of the loop until it gets bigger than the length of the array and the loop finishes. At each iteration, we modify \m{result} by adding to it the array entry we're currently looking at.
+
+In the functional program, we pattern match on the argument of the function. In case it is \m{Nil} (an empty list), we declare the result to be \m{0}. In case it is \m{Cons x xs} (a list with head \m{x} and tail \m{xs}), we declare that the result is the sum of \m{xs} and the sum of numbers from the list \m{xs}.
+
+Even though these programs are very simple, they are quite representative when it comes to showcasing differences between imperative and functional algorithms. Other differences are / no cyclic structures, pointer juggling, persistent data structures, immutability and what not.
 
 
 \section{Complexity, performance and correctness}
