A few bullet points on further differences between imperative and functional algorithms.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -13,14 +13,14 @@
 % zlamaniu wierszy w temacie pracy, zwlaszcza tego w jezyku pracy. Uzyj do tego
 % polecenia \fmlinebreak.
 \englishtitle   {Formally verified algorithms and data structures in Coq: concepts and techniques}
-\polishtitle    {Formalnie zweryfikowane algorytmy i struktury danych w Coqu: koncepty i techniki}
+\polishtitle    {Formalnie zweryfikowane algorytmy i struktury danych w Coqu: koncepcje i techniki}
 \polishabstract {Omawiamy sposoby projektowania, implementowania, specyfikowania i weryfikowania funkcyjnych algorytmów i struktur danych, skupiając się bardziej na dowodach formalnych niż na asymptotycznej złożoności czy faktycznym czasie działania. Prezentujemy koncepty i techniki, obie często opierające na jednej kluczowej zasadzie -- reifikacji i reprezentacji, za pomocą potężnego systemu typów Coqa, czegoś co w klasycznym, imperatywnym podejściu jest nieuchwytne, jak przepływ informacji w dowodzie czy kształt rekursji funkcji. Nasze podejście bogato ilustrujemy przykładami i studiami przypadku.}
 \englishabstract{We discuss how to design, implement, specify and verify functional algorithms and data structures, concentrating on formal proofs rather than asymptotic complexity or actual performance. We present concepts and techniques, both of which often rely on one key principle -- the reification and representation, using Coq's powerful type system, of something which in the classical-imperative approach is intangible, like the flow of information in a proof or the shape of a function's recursion. We illustrate our approach using rich examples and case studies.}
 % w pracach wielu autorow nazwiska mozna oddzielic poleceniem \and
 \author         {Wojciech Kołowski}
 % w przypadku kilku promotorow, lub koniecznosci podania ich afiliacji, linie
 % w ponizszym poleceniu mozna zlamac poleceniem \fmlinebreak
-\advisor        {narazienikt}
+\advisor        {oficjalnienarazienikt}
 \date           {Czerwiec '20 chyba że koronawirus}                     % Data zlozenia pracy
 % Dane do oswiadczenia o autorskim wykonaniu
 %\transcriptnum {}                     % Numer indeksu
@@ -72,7 +72,7 @@ But before we do that, we spend the rest of this chapter on comparing the impera
 
 \section{Two flavours of algorithms}
 
-The differences between imperative and functional algorithms are mostly a reflection of the differences between imperative and functional programming languages and only in a small part a matter of differences in research focus. For example, it's rare but possible to implement persistent data structures in imperative languages, whereas it's the default for functional data structures \cite{PersistentDataStructures}, all caused by built-in language features. An example of the second kind of difference may be the bigger focus on lazy evaluation for functional algorithms.
+The differences between imperative and functional algorithms are mostly a reflection of the differences between imperative and functional programming languages and only in a small part a matter of differences in research focus.
 
 The basic data structure in imperative languages is the array, which abstracts a contiguous block of memory holding values of a particular type. More advanced data structures are usually records that hold values and pointers/references to other (or even the same) kinds of data structures. The basic control flow primitives for traversing these structures are various loops (\m{while}, \m{for}, \m{do} ... \m{while}) and branch/jump statements (\m{if}, \m{switch}, \m{goto}). The most important operation is assignment, which changes the state held in a variable. Computation is modeled by a series of operations which change the global state.
 
@@ -106,13 +106,20 @@ In functional languages both basic and advanced data structures amount to algebr
     \end{center}
 \end{listing}
 
-The two above listings showcase the relevant differences in practice. In both cases we want a function that sums integers stored in the most basic data structure. In the case of our pseudo-Java, this is a built-in array, whereas in our pseudo-Haskell, this is a list defined, using the mechanism of algebraic data types, as something which is either empty (\m{Nil}) or something that has a head of type \m{a} and a tail, which is another list of values of type \m{a}.
+The two above programs showcase the relevant differences in practice. In both cases we want a function that sums integers stored in the most basic data structure. In the case of our pseudo-Java, this is a built-in array, whereas in our pseudo-Haskell, this is a list defined, using the mechanism of algebraic data types, as something which is either empty (\m{Nil}) or something that has a head of type \m{a} and a tail, which is another list of values of type \m{a}.
 
 In the imperative program, we declare a variable \m{result} to hold the current value of the sum and then we loop over the array. We start by creating an iterator variable \m{i} and setting it to \m{0}. We successively increment it with each iteration of the loop until it gets bigger than the length of the array and the loop finishes. At each iteration, we modify \m{result} by adding to it the array entry we're currently looking at.
 
 In the functional program, we pattern match on the argument of the function. In case it is \m{Nil} (an empty list), we declare the result to be \m{0}. In case it is \m{Cons x xs} (a list with head \m{x} and tail \m{xs}), we declare that the result is the sum of \m{xs} and the sum of numbers from the list \m{xs}.
 
-Even though these programs are very simple, they are quite representative when it comes to showcasing differences between imperative and functional algorithms. Other differences are / no cyclic structures, pointer juggling, persistent data structures, immutability and what not.
+Even though these programs are very simple, they depict the basic differences between imperative and functional algorithms quite well. Other differences:
+
+\begin{itemize}
+    \item Functional data structures are by default immutable and persistent \cite{PersistentDataStructures}, whereas such traits are very rare for imperative data structures. This makes functional backtracking very easy, whereas imperative backtracking often requires much more effort.
+    \item Pointer juggling in imperative languages allows more efficient implementation of some operations on tree-like structures than using algebraic data types, because nodes in such trees can have pointers not only to their children, but also to parents/grandparents/siblings etc. The most famous data structure whose purely functional, asymptotically optimal implementation is not known is union-find \cite{FunctionalUnionFind}.
+    \item Pointer juggling also allows to represent cyclic structures, like cyclic lists, which is impossible in strict functional languages (but possible in lazy functional languages).
+    \item 
+\end{itemize}
 
 
 \section{Complexity, performance and correctness}
@@ -160,8 +167,13 @@ Binary search trees: a case study to show the basic workflow and that it's not t
     Thomas S. Kuhn, \textit{The Structure of Scientific Revolutions}
 
 \bibitem{PersistentDataStructures}
-    Driscoll JR, Sarnak N, Sleator DD, Tarjan RE, 1986 \\
-    \textit{Making data structures persistent}
+    Driscoll JR, Sarnak N, Sleator DD, Tarjan RE \\
+    \textit{Making data structures persistent}, 1986
+
+\bibitem{FunctionalUnionFind}
+    Sylvain Conchon, Jean-Christophe Fillâtre, \\
+    \textit{A Persistent Union-Find Data Structure}, 2007 \\
+    \url{https://www.lri.fr/~filliatr/ftp/publis/puf-wml07.pdf}
 
 \end{thebibliography}
 
